--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React</title>
+    <title>React by Ashish</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root"> </div>
-
-<!-- <script>
-   const heading = document.createElement("h1");
-   heading.innerHTML = "hello world from javascript";
-
-   const root = document.getElementById("root");
-   root.appendChild(heading);
-</script>    -->
-
-<script type="module" src="./app.js">
+    <div id="root"> 
+        <h1>Not rendered</h1>
+    </div>
+<script type="module" src="./src/app.jsx">
    
 </script>
 </body>
