--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"> 
         <h1>Not rendered</h1>
     </div>
-<script type="module" src="./src/app.jsx">
+<script type="module" src="./src/App.jsx">
    
 </script>
 </body>
